update + delete album
